--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
         <string name="user_form_user_gender_label">Com qual genêro a pessoa se identifica?</string>
 
         <string name="user_form_user_age_label">Idade</string>
+        <string name="user_form_user_age_hint">DD/MM/AAAA</string>
 
         <string name="user_form_user_income_label">Renda Mensal</string>
 
