--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,41 +119,41 @@
 
     <!-- USER -->
 
-        <!-- NEW -->
-        <string name="user_form_title">Cadastrar uma nova Usuária</string>
+    <!-- NEW -->
+    <string name="user_form_title">Cadastrar uma nova Usuária</string>
 
-        <string name="user_form_user_name_label">Nome Completo</string>
-        <string name="user_form_user_name_hint">Ex: Roberto Silva Ferreira</string>
+    <string name="user_form_user_name_label">Nome Completo</string>
+    <string name="user_form_user_name_hint">Ex: Roberto Silva Ferreira</string>
 
-        <string name="user_form_user_document_number_label">CPF ou RG</string>
-        <string name="user_form_user_document_number_hint">Insira apenas números</string>
+    <string name="user_form_user_document_number_label">CPF ou RG</string>
+    <string name="user_form_user_document_number_hint">Insira apenas números</string>
 
-        <string name="user_form_user_phone_label">Celular</string>
-        <string name="user_form_user_phone_hint">DDD + Número</string>
+    <string name="user_form_user_phone_label">Celular</string>
+    <string name="user_form_user_phone_hint">DDD + Número</string>
 
-        <string name="user_form_user_document_picture_label">Fotos do documento</string>
-        <string name="user_form_user_document_picture_front_label">Fotografe a frente do documento</string>
-        <string name="user_form_user_document_picture_back_label">Fotografe o verso do documento</string>
+    <string name="user_form_user_document_picture_label">Fotos do documento</string>
+    <string name="user_form_user_document_picture_front_label">Fotografe a frente do documento</string>
+    <string name="user_form_user_document_picture_back_label">Fotografe o verso do documento</string>
 
-        <string name="user_form_user_gender_label">Com qual genêro a pessoa se identifica?</string>
+    <string name="user_form_user_gender_label">Com qual genêro a pessoa se identifica?</string>
 
-        <string name="user_form_user_age_label">Idade</string>
-        <string name="user_form_user_age_hint">DD/MM/AAAA</string>
+    <string name="user_form_user_age_label">Idade</string>
+    <string name="user_form_user_age_hint">DD/MM/AAAA</string>
 
-        <string name="user_form_user_income_label">Renda Mensal</string>
+    <string name="user_form_user_income_label">Renda Mensal</string>
 
-        <string name="user_form_user_race_label">Com qual raça a pessoa se identifica?</string>
+    <string name="user_form_user_race_label">Com qual raça a pessoa se identifica?</string>
 
-        <string name="user_form_user_schooling_label">Até que grau a pessoa estudou?</string>
+    <string name="user_form_user_schooling_label">Até que grau a pessoa estudou?</string>
 
-        <string name="user_form_user_adrees_label">Endereço completo</string>
-        <string name="user_form_user_adrees_hint">Ex: Rua Marielle Franco, 123</string>
+    <string name="user_form_user_adrees_label">Endereço completo</string>
+    <string name="user_form_user_adrees_hint">Ex: Rua Marielle Franco, 123</string>
 
-        <string name="user_form_user_others_picture_label">Outros arquivos</string>
-        <string name="user_form_user_residence_proof_picture_label">Comprovante de residência (Opcional)</string>
-        <string name="user_form_user_perfil_picture_label">Foto de perfil</string>
+    <string name="user_form_user_others_picture_label">Outros arquivos</string>
+    <string name="user_form_user_residence_proof_picture_label">Comprovante de residência (Opcional)</string>
+    <string name="user_form_user_perfil_picture_label">Foto de perfil</string>
 
-        <string name="user_form_button">CRIAR USUÁRIA</string>
+    <string name="user_form_button">CRIAR USUÁRIA</string>
 
     <!-- /NEW -->
 
@@ -250,7 +250,7 @@
     <string name="success_devolution_message">Devolução realizada com sucesso!</string>
     <string name="repeat_devolution_title">Devolver outra</string>
     <string name="wait_in_build">O histórico de atividades está em construção. Aguarde mais um pouco e logo estará disponível :)</string>
-    <string name="active_withdraw">Empréstimo<br>\nativo</br></string>
+    <string name="active_withdraw">Empréstimo ativo</string>
 
     <!-- User Form -->
     <string name="user_form_step_label">Preencha os dados</string>
@@ -319,7 +319,7 @@
     <string name="camera_dialog_positive_button_text">Tirar foto!</string>
 
     <!-- Schooling Options -->
-    <string-array name = "schooling_options">
+    <string-array name="schooling_options">
         <item> Sem instrução ou menos de 1 ano de estudo </item>
         <item> Ensino fundamental 1 </item>
         <item> Ensino fundamental 2 </item>
@@ -330,7 +330,7 @@
     </string-array>
 
     <!-- Gender Options -->
-    <string-array name = "gender_options">
+    <string-array name="gender_options">
         <item> Masculino </item>
         <item> Feminino </item>
         <item> Outro </item>
@@ -338,7 +338,7 @@
     </string-array>
 
     <!-- Schooling Status Options -->
-    <string-array name = "schooling_status_options">
+    <string-array name="schooling_status_options">
         <item> Completo </item>
         <item> Incompleto </item>
         <item> Cursando </item>
@@ -346,4 +346,7 @@
 
     <!-- Default -->
     <string name="default_custom_component_select_hint">Selecionar</string>
+
+    <!-- Withdraw bike -->
+    <string name="user_phone_number">Telefone: •••• 4562</string>
 </resources>
