--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -250,7 +250,7 @@
     <string name="success_devolution_message">Devolução realizada com sucesso!</string>
     <string name="repeat_devolution_title">Devolver outra</string>
     <string name="wait_in_build">O histórico de atividades está em construção. Aguarde mais um pouco e logo estará disponível :)</string>
-    <string name="active_withdraw">Empréstimo ativo</string>
+    <string name="active_withdraw">Com empréstimo ativo</string>
 
     <!-- User Form -->
     <string name="user_form_step_label">Preencha os dados</string>
@@ -348,5 +348,5 @@
     <string name="default_custom_component_select_hint">Selecionar</string>
 
     <!-- Withdraw bike -->
-    <string name="user_phone_number">Telefone: •••• 4562</string>
+    <string name="user_phone_number">Telefone: 11 •••• 4562</string>
 </resources>
