Layout: Changing withdraw and devolution date format
Co-authored-by: Joedav <joelyson.david@live.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,7 +113,7 @@
     <string name="btn_register_bicycle">Cadastrar Bicicleta</string>
     <string name="add_bicycle_title">Cadastrar Bicicleta</string>
     <string name="bike_withdraw_date">Empréstimo em: %s</string>
-    <string name="bike_devolution_date">Data de devolução: %s</string>
+    <string name="bike_devolution_date">Devolução em: %s</string>
     <string name="bike_series_number">Série: %s</string>
     <string name="bike_order_number">Ordem: %s</string>
     <string name="search_cyclist_name">Procure a ciclista pelo nome...</string>
