--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -307,6 +307,7 @@
     <string name="btn_send">Enviar</string>
     <string name="confirm_password">Repita a senha</string>
     <string name="unkown_error">Erro desconhecido</string>
+    <string name="connection_error">Sem acesso a internet, verifique seu WiFi ou dados movéis</string>
     <string name="title_recovery_link_send">Confira seu e-mail</string>
     <string name="message_password_recovery_link_send">Enviamos um link de recuperação de senha para o seu e-mail.</string>
 
