--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -258,8 +258,8 @@
     <string name="success_withdraw_message">Empréstimo realizado!</string>
     <string name="repeat_withdraw_title">Emprestar outra bicicleta</string>
     <string name="back_to_init_title">Voltar para o início</string>
-    <string name="success_devolution_message">Devolução realizada com sucesso!</string>
-    <string name="repeat_devolution_title">Devolver outra</string>
+    <string name="success_devolution_message">Devolução realizada!</string>
+    <string name="repeat_devolution_title">Devolver outra bicicleta</string>
     <string name="wait_in_build">O histórico de atividades está em construção. Aguarde mais um pouco e logo estará disponível :)</string>
     <string name="active_withdraw">Com empréstimo ativo</string>
 
