--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -365,4 +365,5 @@
     <string name="user_phone_number">Telefone: 11 •••• 4562</string>
     <string name="title_activity_finish_withdraw">FinishWithdraw</string>
     <string name="back_to_home">VOLTAR PARA O INÍCIO</string>
+    <string name="title_activity_home">HomeActivity</string>
 </resources>
