Layout: Handle Click and Update List when Search Cyclist

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -368,4 +368,5 @@
     <string name="title_activity_card_bike">CardBike</string>
     <string name="title_activity_bike_list">BikeList</string>
     <string name="title_activity_cyclist_card">CyclistCard</string>
+    <string name="title_activity_cyclist_list">CyclistList</string>
 </resources>
