--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -373,4 +373,6 @@
     <string name="bike_in_use">EM USO</string>
     <string name="bike_returned">DEVOLVIDO</string>
     <string name="title_activity_withdraw_stepper">WithdrawStepper</string>
+    <string name="withdraw_finish_action_message">finish_message</string>
+    <string name="withdraw_finish_action_text">finish_action_text</string>
 </resources>
