--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -376,4 +376,5 @@
     <string name="withdraw_finish_action_message">finish_message</string>
     <string name="withdraw_finish_action_text">finish_action_text</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_return_bicycle">ReturnBicycleActivity</string>
 </resources>
