refactor: refactor some test of ReturnBicycleTest, and added a new Test of backbutton
Co-authored-by: alexandreti <alexix.dasilva@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -377,4 +377,5 @@
     <string name="withdraw_finish_action_text">finish_action_text</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_activity_return_bicycle">ReturnBicycleActivity</string>
+    <string name="topbar_back_button_text">VOLTAR</string>
 </resources>
