--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -378,4 +378,5 @@
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_activity_return_bicycle">ReturnBicycleActivity</string>
     <string name="topbar_back_button_text">VOLTAR</string>
+    <string name="return_bicycle_quiz_page_answer_quiz">Responda ao questionário</string>
 </resources>
