layout: added dropdown reason of used bike
Co-authored-by: luispsilva <luispedro.info@gmail.com>
Co-authored-by: zero7um <oliveirawesleycontato@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -379,4 +379,5 @@
     <string name="title_activity_return_bicycle">ReturnBicycleActivity</string>
     <string name="topbar_back_button_text">VOLTAR</string>
     <string name="return_bicycle_quiz_page_answer_quiz">Responda ao questionário</string>
+    <string name="icon_arrow_down_description">Descrição: icone flexa inferior</string>
 </resources>
