--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,7 +116,7 @@
     <string name="bike_devolution_date">Devolução em: %s</string>
     <string name="bike_series_number">Série: %s</string>
     <string name="bike_order_number">Ordem: %s</string>
-    <string name="search_cyclist_name">Procure a ciclista pelo nome...</string>
+    <string name="search_cyclist_name">Procure a ciclista pelo nome…</string>
 
     <!-- USER -->
 
@@ -239,7 +239,15 @@
     <string name="send_answers_button">Enviar respostas</string>
     <string name="invalid_district">Bairro inválido</string>
 
-    <string-array name="used_bike_to_move_list">
+    <!-- Return Bike Quiz -->
+    <string name="return_bike_survey_select">Selecione</string>
+    <string name="return_bike_used_bike_to_move">A bicicleta foi usada para que?</string>
+    <string name="return_bike_which_district_hint">Qual o bairro de destino?</string>
+    <string name="return_bike_reasons">Qual foi o motivo da sua viagem?</string>
+    <string name="return_bike_neighborhood_hint">Qual foi o bairro de destino?</string>
+    <string name="return_bike_confirm_devolution">Confirmar devolução</string>
+
+    <string-array name="return_bike_purpose_list">
         <item>Seu local de trabalho</item>
         <item>Seu local de estudo</item>
         <item>Seu local de lazer / convivência social</item>
