--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,7 +154,7 @@
     <string name="user_form_user_residence_proof_picture_label">Comprovante de residência (Opcional)</string>
     <string name="user_form_user_perfil_picture_label">Foto de perfil\n (Opcional)</string>
 
-    <string name="user_form_button">ADICIONAR USUÁRIA</string>
+    <string name="user_form_button">ADICIONAR USUÁRIO</string>
 
     <!-- /NEW -->
 
