--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,8 @@
     <string name="prompt_welcome_message">Você já usou o e-mail &lt;b>%s&lt;/b> para fazer login. Insira a senha dessa conta.</string>
     <string name="action_sign_in_or_register">Entrar/Registrar</string>
     <string name="action_next">Próxima</string>
+    <string name="action_next_registration">Próximo</string>
+    <string name="action_cancel">Cancelar</string>
     <string name="action_save">Salvar</string>
     <string name="action_register">Cadastrar</string>
     <string name="prompt_password_registration">Senha (min. 6 caracteres)</string>
@@ -123,13 +125,13 @@
     <!-- NEW -->
     <string name="user_form_title">Cadastrar uma nova Usuária</string>
 
-    <string name="user_form_user_name_label">Nome Completo</string>
+    <string name="user_form_user_name_label">Nome Completo*</string>
     <string name="user_form_user_name_hint">Ex: Roberto Silva Ferreira</string>
 
     <string name="user_form_user_document_number_label">CPF ou RG</string>
     <string name="user_form_user_document_number_hint">Insira apenas números</string>
 
-    <string name="user_form_user_phone_label">Celular</string>
+    <string name="user_form_user_phone_label">Celular*</string>
     <string name="user_form_user_phone_hint">DDD + Número</string>
 
     <string name="user_form_user_document_picture_label">Fotos do documento</string>
@@ -138,7 +140,7 @@
 
     <string name="user_form_user_gender_label">Com qual genêro a pessoa se identifica?</string>
 
-    <string name="user_form_user_birthday_label">Nascimento</string>
+    <string name="user_form_user_birthday_label">Nascimento*</string>
     <string name="user_form_user_birthday_hint">DD/MM/AAAA</string>
 
     <string name="user_form_user_income_label">Renda Mensal</string>
@@ -147,7 +149,7 @@
 
     <string name="user_form_user_schooling_label">Até que grau a pessoa estudou?</string>
 
-    <string name="user_form_user_adrees_label">Endereço completo</string>
+    <string name="user_form_user_adrees_label">Endereço completo*</string>
     <string name="user_form_user_adrees_hint">Ex: Rua Marielle Franco, 123</string>
 
     <string name="user_form_user_others_picture_label">Outros arquivos</string>
@@ -273,6 +275,7 @@
 
     <!-- User Form -->
     <string name="user_form_step_label">Preencha os dados</string>
+
     <string name="title_dialog_change_image">Deseja alterar o comprovante?</string>
     <string name="subtitle_dialog_change_image">Certifique que as informações estão legíveis e clique na foto abaixo.</string>
 
@@ -389,4 +392,5 @@
     <string name="topbar_back_button_text">VOLTAR</string>
     <string name="return_bicycle_quiz_page_answer_quiz">Responda ao questionário</string>
     <string name="icon_arrow_down_description">Descrição: icone flexa inferior</string>
+    <string name="required">*Obrigatório</string>
 </resources>
