Added locale pt_BR and changed some strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="app_name">Bota pra Rodar</string>
     <string name="title_home">Home</string>
@@ -389,4 +389,13 @@
     <string name="topbar_back_button_text">VOLTAR</string>
     <string name="return_bicycle_quiz_page_answer_quiz">Responda ao questionário</string>
     <string name="icon_arrow_down_description">Descrição: icone flexa inferior</string>
+
+    <!--  Material - values-pt-rBR.xml  -->
+    <string name="mtrl_picker_cancel" tools:override="true">Cancelar</string>
+    <string name="mtrl_picker_date_header_title" tools:override="true">Selecionar data</string>
+    <string name="mtrl_picker_out_of_range" tools:override="true">Data inválida</string>
+    <string name="mtrl_picker_invalid_format_example" tools:override="true">Exemplo: 31/01/1990</string>
+    <string name="mtrl_picker_date_header_unselected" tools:override="true">Data selecionada</string>
+    <string name="mtrl_picker_invalid_format" tools:override="true">Formato inválido, utilize: dd/mm/aaaa</string>
+    <string name="mtrl_picker_text_input_year_abbr" tools:override="true">aa</string>
 </resources>
