ramonmluz: Adjust Quiz fragment layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,7 +157,7 @@
     <string name="user_form_user_residence_proof_picture_label">Comprovante de residência (Opcional)</string>
     <string name="user_form_user_perfil_picture_label">Foto de perfil\n (Opcional)</string>
 
-    <string name="user_form_button">ADICIONAR USUÁRIO</string>
+    <string name="user_form_button">Concluir Cadastro</string>
 
     <!-- /NEW -->
 
@@ -298,10 +298,10 @@
     <string name="user_quiz_already_bicycle_user_question">Já utilizava a bicicleta antes do Bota Pra Rodar?</string>
     <string name="user_quiz_how_much_time_question">Há quanto tempo?</string>
     <string name="user_quiz_how_much_time_hint">Tempo em meses Ex: 16</string>
-    <string name="user_quiz_motivation_question_label">Qual sua motivação para utilizar a bicicleta como meio de transporte?</string>
+    <string name="user_quiz_motivation_question_label">Qual sua motivação para utilizar a bicicleta como meio de transporte?*</string>
     <string name="user_quiz_motivation_question">Motivação</string>
-    <string name="user_quiz_accident_victim_question">Já foi vítima de colisão/atropelamento?</string>
-    <string name="user_quiz_problems_on_way_question_label">Quais os problemas que você mais percebe durante o seu trajeto?</string>
+    <string name="user_quiz_accident_victim_question">Já foi vítima de colisão/atropelamento?*</string>
+    <string name="user_quiz_problems_on_way_question_label">Quais os problemas que você mais percebe durante o seu trajeto?*</string>
     <string name="user_quiz_problems_on_way_question">Ex: Falta de ciclovia</string>
     <string name="user_quiz_time_on_way_question_label">Quanto tempo você leva no trajeto mais frequente/comum que realiza de bicicleta?</string>
     <string name="user_quiz_time_on_way_question">00:00</string>
