ramonmluz: Set of required message and Adjust race label

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,7 +140,7 @@
     <string name="user_form_user_document_picture_front_label">Fotografe a frente do documento</string>
     <string name="user_form_user_document_picture_back_label">Fotografe o verso do documento</string>
 
-    <string name="user_form_user_gender_label">Com qual genêro a pessoa se identifica?*</string>
+    <string name="user_form_user_gender_label">Com qual gênero a pessoa se identifica?*</string>
 
     <string name="user_form_user_birthday_label">Nascimento*</string>
     <string name="user_form_user_birthday_hint">DD/MM/AAAA</string>
@@ -421,4 +421,5 @@
     <string name="mtrl_picker_confirm" tools:override="true">Selecionar</string>
 
     <string name="required">*Obrigatório</string>
+    <string name="required_fields">*Campos obrigatórios</string>
 </resources>
