ramonmluz: create selectable values from dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -299,6 +299,8 @@
     <string name="user_quiz_already_bicycle_user_question">Já utilizava a bicicleta antes do Bota Pra Rodar?</string>
     <string name="user_quiz_how_much_time_question">Há quanto tempo?</string>
     <string name="user_quiz_how_much_time_hint">Tempo em meses Ex: 16</string>
+    <string name="user_quiz_motivation_open_field_motivation">Indique a motivação da usuária</string>
+    <string name="user_quiz_motivation_dialog_label">Por que a usuária começou a usar a bicicleta como meio de transporte?</string>
     <string name="user_quiz_motivation_question_label">Por que a usuária começou a usar a bicicleta como meio de transporte?*</string>
     <string name="user_quiz_motivation_question">Motivação</string>
     <string name="user_quiz_accident_victim_question">Já foi vítima de colisão/atropelamento?*</string>
