--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -252,6 +252,7 @@
     <string name="return_bike_reasons">Qual foi o motivo da sua viagem?</string>
     <string name="return_bike_neighborhood_hint">Qual foi o bairro de destino?*</string>
     <string name="return_bike_confirm_devolution">Confirmar devolução</string>
+    <string name="return_bike_write_neighborhood_hint">Informe o bairro de destino?*</string>
 
     <string-array name="return_bike_purpose_list">
         <item>Seu local de trabalho</item>
